2022-10-14T08:34:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248549206 # 519
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
* notice: next accum: outdated-unq outdated-all / unq all: 354 554 / 375 585
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-30 2022-10-14]

2022-10-13T16:40:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3244127627 # 517
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 353 552 / 375 584
* notice: next accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-09-29] / [2022-10-13]

2022-10-13T08:34:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3240862073 # 516
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 353 552 / 374 583
* notice: next accum: outdated-unq outdated-all / unq all: 353 552 / 375 584
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-13]

2022-10-13T02:32:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3239273076 # 515
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 351 548 / 373 580
* notice: next accum: outdated-unq outdated-all / unq all: 353 552 / 374 583
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +7 +10 -0 -0 / 7 10
* notice: removed / changed dates: [2022-09-28] / [2022-09-29 2022-10-12]

2022-10-12T16:48:49Z: