@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-14T08:34:30Z",
+  "timestamp" : "2022-10-14T16:39:01Z",
   "count_outdated" : 554,
   "uniques_outdated" : 354,
-  "count" : 585,
+  "count" : 586,
   "uniques" : 375,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
