@@ -1,3 +1,11 @@
+2022-10-14T16:39:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3251528129 # 520
+* notice: last 14d: unq all: 11 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 354 554 / 375 585
+* notice: next accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-14]
+
 2022-10-14T08:34:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248549206 # 519
 * notice: last 14d: unq all: 11 31
